@@ -1,3 +1,13 @@
+2009-07-20  Alex Harsanyi  <haral@users.sourceforge.net>
+
+	* vc-clearcase.el (vc-annotate-warp-revisionm)
+	(vc-annotate-extract-revision-at-line): declare function to
+	prevent compiler warning
+	(vc-clearcase-annotate-contributor)
+	(vc-clearcase-annotate-contributor-to-line)
+	(vc-clearcase-annotate-latest-on-branch): declare
+	`vc-annotate-parent-file', `vc-annotate-parent-rev' as special.
+
 2009-07-15  Alex Harsanyi  <haral@users.sourceforge.net>
 
 	* vc-clearcase.el (cleartool-wait-for): 423 Fix Bug #2821317, `or'
